testsuite/poke.pkl/cast-array-diag-5.pk
/* { dg-do compile } */

var a = [[1,2],[3,4]] as int[3][3]; /* { dg-error "" } */
